# capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml
capstone/: data_cleaning.py  helper_functions.py  main.py  pynesol.py  sandbox.ipynb
capstone/data/: data_cleaning.ipynb
capstone/visualization/: mke_um_figs.py
data/dev/: data.csv
data/test/: data.csv
notes/: ANDY-NOTES.md  NOTES.md  index.html
src/: example-linter-file.py  main.py
tests/: test_data_cleaning.py  test_helper_functions.py  test_main.py
