[project]
name = "capstone-2026"
description = "Capstone project UMich MADS Spring/Summer 2026."
version = "0.1.0"
requires-python = ">= 3.13"
authors = [
  {name = "Andy Tunison", email = "andrew.e.tunison@gmail.com"},
  {name = "Melody Ren", email="yyren@umich.edu"},
  {name = "Sahana Sundar", email="sahanasu@umich.edu"}
]
readme = "README.md"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
extend-exclude = ["notes"]  # Excludes the notes (allows us to have unclean code there)
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
#no_namespace_packages = true
#explicit_package_bases = true
